tests/machine/x/ocaml/string_in_operator.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/string_in_operator.ml", line 4, characters 23-25:
4 |   print_endline ("cat" in s)
                           ^^
Error: Syntax error: ')' expected
File "/workspace/mochi/tests/machine/x/ocaml/string_in_operator.ml", line 4, characters 16-17:
4 |   print_endline ("cat" in s)
                    ^
  This '(' might be unmatched


Context (around line 4):
   2 | 
   3 | let () =
   4 |   print_endline ("cat" in s)
   5 |   print_endline ("dog" in s)
   6 | 
