tests/machine/x/ocaml/string_in_operator.ml
let s = "catch"

let () =
  print_endline ("cat" in s)
  print_endline ("dog" in s)
